<resources>
    <string name="app_name">SIMtest</string>
    <string name="labelMcc">SIM MCC-MNC:</string>
    <string name="labelOpName">Operator Name:</string>
    <string name="labelBtn">Get Data</string>
    <string name="labelSerialNumber">SIM Serial Number:</string>
    <string name="labelIso">ISO Code:</string>
    <string name="labelIMSI">IMSI:</string>
    <string name="action_settings">Settings</string>
    <string name="labelTime">Time:</string>
</resources>
